--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -18,5 +18,9 @@
 }
 
 body {
-  background-color: #F3F3F8;
+  background-color: #F6F8FB;
+}
+
+.svgWhite{
+  filter: invert(94%) sepia(81%) saturate(16%) hue-rotate(170deg) brightness(107%) contrast(101%);
 }
